# Overlay-CyberTech-

./: .gitignore  3842dfbf.md  Comprehensive architecture  Govetech add on  README.md  Robust additions  Sector specific security  Unify repo  circulatory_informatics_eda.md  e54b5a78.md  example_workflow.py  main.py  mesh_net.py  pyproject.toml  requirements.txt  setup.py
backend/: __init__.py  app.py  config.py
backend/middleware/: __init__.py  auth.py  rate_limiter.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  playbook.py  scan.py  security.py  system.py
backend/services/: __init__.py  playbook_service.py  scan_service.py  security_service.py
core/: __init__.py  circulatory_informatics.py  data_structures.py  global_cybersecurity_mesh.py  platform_support.py  system_cleaner.py
deployment/: __init__.py  security.py
detection/: __init__.py  intrusion_detector.py  red_team.py  threat_detector.py
kernel/: __init__.py  formal_verification.py
response/: __init__.py  lts_engine.py
tests/: __init__.py  test_backend.py  test_circulatory_informatics.py  test_global_cybersecurity_mesh.py  test_mesh_net.py  test_new_modules.py  test_red_team.py  test_sbom_detection.py  test_security_os.py
